# toy-scheme

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  xmake.lua
src/: main.cpp  sexp.cpp  sexp.cppm  toyscheme-lisp.cppm  toyscheme-memory.cppm  toyscheme-util.cppm  toyscheme.cppm  yawarakai-lisp.cppm  yawarakai-memory.cppm  yawarakai-util.cppm  yawarakai.cpp  yawarakai.cppm
src/toyscheme/: eval.cpp  general.cpp  memory.cpp  util.hpp
src/yawarakai/: eval.cpp  general.cpp  memory.cpp  sexp.cpp  sexp.cppm  util.cppm  util.hpp
tests/: basic.scm  captures.scm  defines.scm  exceptions.scm  let.scm  recursion.scm  test.txt
